@@ -1,8 +1,9 @@
-* Wed Apr 5 2006 Brendan O'Dea <bod@optus.net> 2.1.17
+* Thu Apr 13 2006 Brendan O'Dea <bod@optus.net> 2.1.17
 - Fix IPCP length test to allow Terminate-Request (4 bytes).
 - Send nsctl responses back using the correct source address (thanks ltd).
 - Similarly set the source for DAE responses; use bind_address when
   handling forwarded packets on the master.
+- Add Acct-Terminate-Cause to RADIUS stop records.
 
 * Thu Feb 23 2006 Brendan O'Dea <bod@optus.net> 2.1.16
 - Send configured magic-no in LCP EchoReq when LCP is opened.
